--- a/exec/Makefile
+++ b/exec/Makefile
@@ -1,4 +1,5 @@
 APP = BPDEM2D
+DEM = DEMARENA
 CC = g++
 INC_PATH = ../include
 LIB_PATH = ../lib
@@ -6,13 +7,21 @@ LIB_PATH = ../lib
 CFLAGS = -w -Wall -I$(INC_PATH)
 OBJS = $(APP).o $(LIB_PATH)/*.o
 
-all: $(APP)
+OBJSDEM = $(DEM).o $(LIB_PATH)/*.o
+
+all: $(APP) $(DEM)
 
 $(APP).o : $(APP).cpp
 	$(CC) $(CFLAGS) -c $(APP).cpp
 
 $(APP) : $(OBJS)
 	$(CC) -o $@ $(CFLAGS) $(OBJS)
+
+$(DEM).o : $(DEM).cpp
+	$(CC) $(CFLAGS) -c $(DEM).cpp
+
+$(DEM) : $(OBJSDEM)
+	$(CC) -o $@ $(CFLAGS) $(OBJSDEM)
 
 clean:
 	rm -f *~ \#*\#
