--- a/test/config.cfg
+++ b/test/config.cfg
@@ -5,14 +5,15 @@ ns 10
 
 Cell{
 L 1.
-xx v 0.
+m 2.
 xy v 0.
 yx v 0.
 yy v 0.
 }
+xx v 0.
 
 Sample{
-sample.spl
+includeFile sample.spl
 rho 1.
 }
 
