architecture schema integration ok

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,15 +1,26 @@
 Algo{
 dt 0.01
-ns 10
+ns 1
 }
 
+//Ici on pourra rajouter a la place des composantes un nom d'essai directement
+//ex: compressionIsotrope Pxx Pyy ou SimpleShear dotgamma ou CyclycShear Amplitude Periode etc...
 Cell{
-L 1.
-m 2.
+L_auto
+m_auto
 xx v 0.
-xy v 0.
+xy v 2.
 yx v 0.
 yy v 0.
+}
+
+//Les distance dv et dsv sont donnees en Rmax
+Interactions{
+setUnit Rmax
+dv 0.83
+dsv 3.
+niterv 1
+nitersv 1
 }
 
 Sample{
@@ -17,3 +28,10 @@ includeFile sample.spl
 rho 1.
 }
 
+
+#Parametres DEM interactions (kn,kt,mu...) ici ??
+#Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
+DEM{
+
+
+}
