outputs filename scheme ok

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ INC_PATH = ../include
 LIB_PATH = ../lib
 CC = g++
 CFLAGS = -w -Wall -I$(INC_PATH)
-SRC = Algo.cpp Particle.cpp Cell.cpp Config.cpp Tenseur.cpp Vecteur.cpp Sample.cpp Interactions.cpp Contact.cpp
+SRC = Algo.cpp Particle.cpp Cell.cpp Config.cpp Tenseur.cpp Vecteur.cpp Sample.cpp Interactions.cpp Contact.cpp globalfunctions.cpp
 
 OBJS = $(subst .cpp,.o,$(SRC))
 .SUFFIXES: .cpp
