--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,6 +1,7 @@
 Algo{
 dt 0.01
 ns 1
+nrecord 1
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -24,7 +25,7 @@ nitersv 1
 }
 
 Sample{
-includeFile sample.spl
+includeFile sample1.txt
 rho 1.
 }
 
