writing periodic modular ps

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,7 +1,8 @@
 Algo{
 dt 0.01
-ns 200
-nrecord 50
+ns 1
+nana 1
+nrecord 1
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -25,7 +26,7 @@ nitersv 1
 }
 
 Sample{
-includeFile sample1.txt
+includeFile sample0.spl
 rho 1.
 }
 
