Integration written. Collisions test & Debug WIP

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -7,9 +7,11 @@ nrecord 1
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
 //ex: compressionIsotrope Pxx Pyy ou SimpleShear dotgamma ou CyclycShear Amplitude Periode etc...
-Cell{
 L_auto
 m_auto
+Cell{
+Lx 6
+Ly 6
 xx v 0.
 xy v 0.
 yx v 0.
@@ -26,7 +28,7 @@ nitersv 1
 }
 
 Sample{
-includeFile sample0.spl
+includeFile sample.spl
 rho 1.
 }
 
