Bounding box fixed definately - elastic collisions ok

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,16 +1,18 @@
 Algo{
 dt 1e-6
-ns 100
-nana 10
-nrecord 10
+ns 1
+nana 1
+nrecord 100
 }
+nana 1000
+ns 500000
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
 //ex: compressionIsotrope Pxx Pyy ou SimpleShear dotgamma ou CyclycShear Amplitude Periode etc...
-L_auto
+Lx 5
+Ly 5
 Cell{
-Lx 10
-Ly 10
+L_auto
 m_auto
 xx v 0.
 xy v 0.
@@ -28,7 +30,7 @@ nitersv 1
 }
 
 Sample{
-includeFile sample.spl
+includeFile newtonpendulum.spl
 rho 1.
 }
 
