--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,17 +1,12 @@
 Algo{
-dt 1e-6
-ns 800000
+dt 5e-6
+ns 1
 nana 5
 nrecord 1000
 }
 
-ns 1
-nana 1
-nrecord 1
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
 //ex: compressionIsotrope Pxx Pyy ou SimpleShear dotgamma ou CyclycShear Amplitude Periode etc...
-Lx 5
-Ly 5
 Cell{
 L_auto
 m_auto
@@ -22,19 +17,24 @@ yy v 0.
 }
 
 //Les distance dv et dsv sont donnees en Rmax
+//DEM parameters are stored (for the moment) in Interactions
 Interactions{
 setUnit Rmax
 dv 0.83
 dsv 3.
 niterv 1
 nitersv 1
+kn 1e7
+kt 1e7
+gn 5000.
+gt 20.
+mu 0.5
 }
 
 Sample{
 rho 1.
-includeFile rotations.txt
+includeFile initsamples/rotations.txt
 }
-
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
 #Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
