calcul stress cin et stat, a test pour cellule

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,8 +1,8 @@
 Algo{
-dt 5e-6
-ns 1
-nana 5
-nrecord 1000
+dt 5.5e-7
+ns 8000
+nana 1
+nrecord 100
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -26,14 +26,14 @@ niterv 1
 nitersv 1
 kn 1e7
 kt 1e7
-gn 5000.
-gt 20.
+gn 0.
+gt 0.
 mu 0.5
 }
 
 Sample{
 rho 1.
-includeFile initsamples/rotations.txt
+includeFile initsamples/stress.txt
 }
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
