--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,6 +1,6 @@
 Algo{
-dt 5.5e-7
-ns 8000
+dt 5.2e-6
+ns 5000
 nana 1
 nrecord 100
 }
@@ -10,10 +10,10 @@ nrecord 100
 Cell{
 L_auto
 m_auto
-xx v 0.
+xx v 10.
 xy v 0.
 yx v 0.
-yy v 0.
+yy v 10.
 }
 
 //Les distance dv et dsv sont donnees en Rmax
@@ -33,7 +33,7 @@ mu 0.5
 
 Sample{
 rho 1.
-includeFile initsamples/stress.txt
+includeFile initsamples/sample0.spl
 }
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
