WIP: load from a previous sim. config.cfg in test contains useful info

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,7 +1,7 @@
 Algo{
-dt 2.e-6
-ns 10000000
-nana 5000
+dt 1.5e-6
+ns 950000
+nana 10000
 nrecord 10000
 }
 
@@ -10,31 +10,39 @@ nrecord 10000
 Cell{
 L_auto
 m_auto
-xx f -50.
+xx f -30.
 xy v 0.
 yx v 0.
-yy f -50.
+yy f -30.
 }
 
-//Les distance dv et dsv sont donnees en Rmax
-//DEM parameters are stored (for the moment) in Interactions
+//DEM parameters are stored (for the moment) in Interactions. Maybe moved in a class managing DEM parameters only
+//dv (distance verlet) and dsv (distance supervelet) are given in setUnit (Rmax usually)
 Interactions{
 setUnit Rmax
 dv 0.5
-dsv 3.
-niterv 500
-nitersv 1000
+dsv 2.
+niterv 200
+nitersv 500
 kn 1e7
 kt 1e7
-gn 5000.
+gn 10000.
 gt 100.
 mu 0.01
 }
 
+
+//Two differents possible loadings at the begining of a simulation:
+#build somesample.txt allows to start a new simulation from a sample of particle (formated) in abs coordinates
+#load somesample.txt allows to load a sample/cell state from a previous simulation
+#build packing0.spl: init a new cell from sample read in absolute coordinates. Build reduced coordinates
+#load integer1 integer2: load reduced + cell corresponding to integer1, and start writing from integer2
+
 Sample{
 rho 1.
-includeFile initsamples/sample0.spl
+build initsamples/sample0.spl
 }
+
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
 #Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
