load previous simu file working! just a centering pb with printSample (again)

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,8 +1,8 @@
 Algo{
 dt 1.5e-6
-ns 950000
+ns 1000000
 nana 10000
-nrecord 10000
+nrecord 100000
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -26,11 +26,10 @@ niterv 200
 nitersv 500
 kn 1e7
 kt 1e7
-gn 10000.
+gn 1000.
 gt 100.
 mu 0.01
 }
-
 
 //Two differents possible loadings at the begining of a simulation:
 #build somesample.txt allows to start a new simulation from a sample of particle (formated) in abs coordinates
@@ -38,11 +37,13 @@ mu 0.01
 #build packing0.spl: init a new cell from sample read in absolute coordinates. Build reduced coordinates
 #load integer1 integer2: load reduced + cell corresponding to integer1, and start writing from integer2
 
+
 Sample{
 rho 1.
-build initsamples/sample0.spl
+load 10 0
 }
 
+#build initsamples/sample0.spl
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
 #Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
