sample centered again ok. Reloading c bon

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,8 +1,8 @@
 Algo{
 dt 1.5e-6
-ns 1000000
-nana 10000
-nrecord 100000
+ns 10000
+nana 100
+nrecord 1000
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -37,7 +37,7 @@ mu 0.01
 #build packing0.spl: init a new cell from sample read in absolute coordinates. Build reduced coordinates
 #load integer1 integer2: load reduced + cell corresponding to integer1, and start writing from integer2
 
-
+#Allow to apply recursively the same load (if 10 was the last output from the prev sim)
 Sample{
 rho 1.
 load 10 0
