Need to debug shear with small systems (some interactions not taken into account)

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,8 +1,8 @@
 Algo{
-dt 1.5e-6
-ns 10000
-nana 100
-nrecord 1000
+dt 1.e-6
+ns 7000000
+nana 50000
+nrecord 50000
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -10,8 +10,8 @@ nrecord 1000
 Cell{
 L_auto
 m_auto
-xx f -30.
-xy v 0.
+xx v 0.
+xy v 1.
 yx v 0.
 yy f -30.
 }
@@ -20,10 +20,10 @@ yy f -30.
 //dv (distance verlet) and dsv (distance supervelet) are given in setUnit (Rmax usually)
 Interactions{
 setUnit Rmax
-dv 0.5
-dsv 2.
-niterv 200
-nitersv 500
+dv 1.
+dsv 3.
+niterv 5
+nitersv 10
 kn 1e7
 kt 1e7
 gn 1000.
@@ -38,12 +38,12 @@ mu 0.01
 #load integer1 integer2: load reduced + cell corresponding to integer1, and start writing from integer2
 
 #Allow to apply recursively the same load (if 10 was the last output from the prev sim)
+#load 0 1
 Sample{
 rho 1.
-load 10 0
+build initsamples/sample0.spl
 }
 
-#build initsamples/sample0.spl
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
 #Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
