--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,8 +1,8 @@
 Algo{
-dt 1.e-6
-ns 7000000
-nana 50000
-nrecord 50000
+dt 4.e-6
+ns 1000
+nana 10
+nrecord 10
 }
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
@@ -11,9 +11,9 @@ Cell{
 L_auto
 m_auto
 xx v 0.
-xy v 1.
+xy v 0.3
 yx v 0.
-yy f -30.
+yy f -1.
 }
 
 //DEM parameters are stored (for the moment) in Interactions. Maybe moved in a class managing DEM parameters only
@@ -22,13 +22,13 @@ Interactions{
 setUnit Rmax
 dv 1.
 dsv 3.
-niterv 5
-nitersv 10
+niterv 1
+nitersv 1
 kn 1e7
 kt 1e7
-gn 1000.
-gt 100.
-mu 0.01
+gn 0.
+gt 0.
+mu 0.
 }
 
 //Two differents possible loadings at the begining of a simulation:
@@ -41,9 +41,10 @@ mu 0.01
 #load 0 1
 Sample{
 rho 1.
-build initsamples/sample0.spl
+build initsamples/3x3.txt
 }
 
+#load 240 241
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
 #Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
