WIP debuging la branche periodique la plus courte dans cellule deformee, bientot ok

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,9 +1,10 @@
 Algo{
-dt 2.e-6
-ns 3500000
-nana 20000
-nrecord 10000
+dt 4.e-6
+ns 1
+nana 1
+nrecord 1
 }
+ns 510000
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
 //ex: compressionIsotrope Pxx Pyy ou SimpleShear dotgamma ou CyclycShear Amplitude Periode etc...
@@ -11,9 +12,9 @@ Cell{
 L_auto
 m_auto
 xx v 0.
-xy v 1.
+xy v 0.5
 yx v 0.
-yy f -30.
+yy f -100.
 }
 
 //DEM parameters are stored (for the moment) in Interactions. Maybe moved in a class managing DEM parameters only
@@ -21,12 +22,12 @@ yy f -30.
 Interactions{
 setUnit Rmax
 dv 1.
-dsv 3.
+dsv 1.
 niterv 1
 nitersv 1
 kn 1e7
 kt 1e7
-gn 5000.
+gn 1000.
 gt 0.
 mu 0.
 }
@@ -41,7 +42,8 @@ mu 0.
 #load 0 1
 Sample{
 rho 1.
-build initsamples/3x3.txt
+#build initsamples/3x3.txt
+load 442 443
 }
 
 #load 240 241
