still debuging this extra banch makint internal stress explodes only after the 2nd collapse while shearing...

--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,10 +1,9 @@
 Algo{
-dt 4.e-6
-ns 1
-nana 1
-nrecord 1
+dt 1.e-6
+ns 10000
+nana 1000
+nrecord 1000
 }
-ns 510000
 
 //Ici on pourra rajouter a la place des composantes un nom d'essai directement
 //ex: compressionIsotrope Pxx Pyy ou SimpleShear dotgamma ou CyclycShear Amplitude Periode etc...
@@ -12,7 +11,7 @@ Cell{
 L_auto
 m_auto
 xx v 0.
-xy v 0.5
+xy v 0.6
 yx v 0.
 yy f -100.
 }
@@ -22,7 +21,7 @@ yy f -100.
 Interactions{
 setUnit Rmax
 dv 1.
-dsv 1.
+dsv 2.
 niterv 1
 nitersv 1
 kn 1e7
@@ -43,10 +42,12 @@ mu 0.
 Sample{
 rho 1.
 #build initsamples/3x3.txt
-load 442 443
+load 140 141
 }
 
 #load 240 241
+#load 442 443
+#load 19 0
 
 #Parametres DEM interactions (kn,kt,mu...) ici ??
 #Ajouter un groupe pour particules pour eventuellement mettre variabilite en frottement par ex a etudier
