--- a/test/config.cfg
+++ b/test/config.cfg
@@ -1,36 +1,38 @@
 Algo{
 dt 1.e-4
-ns 100
-nana 100
-nrecord 2000
+ns 250000
+nana 500
+nrecord 10000
 }
 
 Cell{
 L_auto
 m_auto
-xx v 0.
+xx f -5.
 xy v 0.
 yx v 0.
-yy v 0.
+yy f -5.
 }
 
 Analyse{
 energy
-printSample
-}
-
-strain
 stress
 compacity
+strain
+}
+printSample
+
 
 Interactions{
 setUnit Rmax
-dv 0.5
-niterv 1
+dv 0.3
+dsv 0.7
+niterv 80
+nitersv 200
 kn 1e4
-kt 1e4
+kt 7e3
 gnmax
-gt 1e5
+gtmax
 mu 0.5
 }
 
